Finished good refactor (#219)
* Refactor FinishedGood to FinishedGoodLot

* Refactor FinishedGoodInventory to use aggregationsvc